// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`radioField > should render correctly checked 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u2d uv_toi52u3p"
      >
        <fieldset
          class="uv_1ec5h6m0"
        >
          <div
            class="uv_toi52u0 uv_toi52u2d uv_toi52u5p"
          >
            <div
              class="uv_toi52u0 uv_toi52u2d uv_toi52u5j"
            >
              <legend
                class="uv_17td3g90 uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9own uv_m4c9ow1a uv_m4c9ow32"
              >
                Label
              </legend>
            </div>
            <div
              class="uv_toi52u0 uv_toi52uv uv_toi52u2d uv_toi52u3p"
            >
              <div
                class="uv_17da2jl0 uv_toi52u0 uv_toi52u2d uv_toi52u5j"
              >
                <div
                  aria-disabled="false"
                  class="uv_17da2jl2"
                  data-checked="false"
                  data-error="false"
                >
                  <input
                    aria-disabled="false"
                    aria-invalid="false"
                    class="uv_17da2jl6"
                    id="_r_2_"
                    name="radio"
                    type="radio"
                    value="value-1"
                  />
                  <svg
                    class="uv_17da2jl7"
                    viewBox="0 0 24 24"
                  >
                    <title>
                      radio
                    </title>
                    <g>
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="2"
                      />
                      <circle
                        class="uv_17da2jl9"
                        cx="12"
                        cy="12"
                        r="8"
                      />
                      <circle
                        class="uv_17da2jl8"
                        cx="12"
                        cy="12"
                        r="5"
                      />
                    </g>
                  </svg>
                  <label
                    class="uv_17da2jl3 uv_17da2jl4 uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owj uv_m4c9ow1a"
                    for="_r_2_"
                  >
                    Radio 1
                  </label>
                </div>
              </div>
              <div
                class="uv_17da2jl0 uv_toi52u0 uv_toi52u2d uv_toi52u5j"
              >
                <div
                  aria-disabled="false"
                  class="uv_17da2jl2"
                  data-checked="true"
                  data-error="false"
                >
                  <input
                    aria-disabled="false"
                    aria-invalid="false"
                    class="uv_17da2jl6"
                    id="_r_6_"
                    name="radio"
                    type="radio"
                    value="value-2"
                  />
                  <svg
                    class="uv_17da2jl7"
                    viewBox="0 0 24 24"
                  >
                    <title>
                      radio
                    </title>
                    <g>
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="2"
                      />
                      <circle
                        class="uv_17da2jl9"
                        cx="12"
                        cy="12"
                        r="8"
                      />
                      <circle
                        class="uv_17da2jl8"
                        cx="12"
                        cy="12"
                        r="5"
                      />
                    </g>
                  </svg>
                  <label
                    class="uv_17da2jl3 uv_17da2jl4 uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owj uv_m4c9ow1a"
                    for="_r_6_"
                  >
                    Radio 2
                  </label>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`radioField > should trigger events correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u2d uv_toi52u3p"
      >
        <fieldset
          class="uv_1ec5h6m0"
        >
          <div
            class="uv_toi52u0 uv_toi52u2d uv_toi52u5p"
          >
            <div
              class="uv_toi52u0 uv_toi52u2d uv_toi52u5j"
            >
              <legend
                class="uv_17td3g90 uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9own uv_m4c9ow1a uv_m4c9ow32"
              >
                RadioGroupField events
              </legend>
            </div>
            <div
              class="uv_toi52u0 uv_toi52uv uv_toi52u2d uv_toi52u3p"
            >
              <div
                class="uv_17da2jl0 uv_toi52u0 uv_toi52u2d uv_toi52u5j"
              >
                <div
                  aria-disabled="false"
                  class="uv_17da2jl2"
                  data-checked="true"
                  data-error="false"
                >
                  <input
                    aria-disabled="false"
                    aria-invalid="false"
                    class="uv_17da2jl6"
                    id="_r_c_"
                    name="test"
                    type="radio"
                    value="value-1"
                  />
                  <svg
                    class="uv_17da2jl7"
                    viewBox="0 0 24 24"
                  >
                    <title>
                      radio
                    </title>
                    <g>
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="2"
                      />
                      <circle
                        class="uv_17da2jl9"
                        cx="12"
                        cy="12"
                        r="8"
                      />
                      <circle
                        class="uv_17da2jl8"
                        cx="12"
                        cy="12"
                        r="5"
                      />
                    </g>
                  </svg>
                  <label
                    class="uv_17da2jl3 uv_17da2jl4 uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owj uv_m4c9ow1a"
                    for="_r_c_"
                  >
                    Radio 1
                  </label>
                </div>
              </div>
              <div
                class="uv_17da2jl0 uv_toi52u0 uv_toi52u2d uv_toi52u5j"
              >
                <div
                  aria-disabled="false"
                  class="uv_17da2jl2"
                  data-checked="false"
                  data-error="false"
                >
                  <input
                    aria-disabled="false"
                    aria-invalid="false"
                    class="uv_17da2jl6"
                    id="_r_g_"
                    name="test"
                    type="radio"
                    value="value-2"
                  />
                  <svg
                    class="uv_17da2jl7"
                    viewBox="0 0 24 24"
                  >
                    <title>
                      radio
                    </title>
                    <g>
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="2"
                      />
                      <circle
                        class="uv_17da2jl9"
                        cx="12"
                        cy="12"
                        r="8"
                      />
                      <circle
                        class="uv_17da2jl8"
                        cx="12"
                        cy="12"
                        r="5"
                      />
                    </g>
                  </svg>
                  <label
                    class="uv_17da2jl3 uv_17da2jl4 uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owj uv_m4c9ow1a"
                    for="_r_g_"
                  >
                    Radio 2
                  </label>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
